Add support for more container GUIs and multiplayer checks
Added config options and logic to allow swimming while chest, barrel, dropper, dispenser, and merchant GUIs are open. Updated command and keybind handlers to prevent usage in multiplayer. Adjusted build configuration to use 'keepswimming-fabric' as the archive base name.

--- a/build.gradle
+++ b/build.gradle
@@ -82,9 +82,19 @@ java {
 }
 
 jar {
+    archiveBaseName.set(project.archives_base_name)
+    archiveVersion.set(project.version)
+    archiveClassifier.set("for-MC${project.minecraft_version}")
+
     from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}" }
+        rename { "${it}_${project.archives_base_name}" }
     }
+}
+
+tasks.named("remapJar") {
+    archiveBaseName.set(project.archives_base_name)
+    archiveVersion.set(project.version)
+    archiveClassifier.set("for-MC${project.minecraft_version}")
 }
 
 // configure the maven publication
